# serializer version: 1
# name: test_generate_delivery[kt_bern-set_application_be-ech_instance_be]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0044/4" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0097/2">
  	<ns1:deliveryHeader>
  		<ns2:senderId>https://ebau.apps.be.ch/</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>2020-1</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>Testvorhaben</ns1:description>
  				<ns1:applicationType>Einfache Vorabklärung</ns1:applicationType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>Wohnen</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:natureRisk>
  					<ns1:riskDesignation>Felssturz</ns1:riskDesignation>
  					<ns1:riskExists>true</ns1:riskExists>
  				</ns1:natureRisk>
  				<ns1:constructionCost>1000.0</ns1:constructionCost>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>Teststrasse</ns4:street>
  					<ns4:houseNumber>23b</ns4:houseNumber>
  					<ns4:town>unknown</ns4:town>
  					<ns4:swissZipCode>9999</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:number>1586</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  						<ns3:coordinates>
  							<ns3:LV95>
  								<ns3:east>2480000.0</ns3:east>
  								<ns3:north>1070000.0</ns3:north>
  								<ns3:originOfCoordinates>904</ns3:originOfCoordinates>
  							</ns3:LV95>
  						</ns3:coordinates>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:buildingInformation>
  						<ns1:building>
  							<ns3:EGID>1738778</ns3:EGID>
  							<ns3:numberOfFloors>2</ns3:numberOfFloors>
  							<ns3:buildingCategory>1040</ns3:buildingCategory>
  							<ns3:civilDefenseShelter>true</ns3:civilDefenseShelter>
  						</ns1:building>
  					</ns1:buildingInformation>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>Testvorname</ns4:firstName>
  								<ns4:lastName>Testname</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>Teststrasse</ns4:street>
  								<ns4:houseNumber>None</ns4:houseNumber>
  								<ns4:town>Testort</ns4:town>
  								<ns4:swissZipCode>1234</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:zone>
  					<ns1:zoneDesignation>Testnutzungszone</ns1:zoneDesignation>
  				</ns1:zone>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:totalCostsOfProject>1000</ns3:totalCostsOfProject>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>Testvorhaben</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Testgemeinde</ns5:municipalityName>
  						<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>00000000-0000-0000-0000-000000000000</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>dummy</ns7:title>
  					</ns6:titles>
  					<ns6:status>signed</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>unknown</ns6:pathFileName>
  							<ns6:mimeType>unknown</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  				</ns1:document>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns8:officialName>Testname</ns8:officialName>
  							<ns8:firstName>Testvorname</ns8:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Teststrasse</ns4:street>
  						<ns4:houseNumber>None</ns4:houseNumber>
  						<ns4:town>Testort</ns4:town>
  						<ns4:swissZipCode>1234</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns9:uid>
  							<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  							<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  						</ns9:uid>
  						<ns9:localOrganisationId>
  							<ns9:organisationIdCategory>ebaube</ns9:organisationIdCategory>
  							<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  						</ns9:localOrganisationId>
  						<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  						<ns9:legalForm>0223</ns9:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>Teststrasse 23</ns4:street>
  						<ns4:town>Burgdorf</ns4:town>
  						<ns4:swissZipCode>3400</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns9:uid>
  						<ns9:uidOrganisationIdCategorie>CHE</ns9:uidOrganisationIdCategorie>
  						<ns9:uidOrganisationId>123123123</ns9:uidOrganisationId>
  					</ns9:uid>
  					<ns9:localOrganisationId>
  						<ns9:organisationIdCategory>ebaube</ns9:organisationIdCategory>
  						<ns9:organisationId><!-- ORGANISATION_ID --></ns9:organisationId>
  					</ns9:localOrganisationId>
  					<ns9:organisationName>Leitbehörde Burgdorf</ns9:organisationName>
  					<ns9:legalForm>0223</ns9:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>Burgdorf</ns5:municipalityName>
  					<ns5:cantonAbbreviation>BE</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
# name: test_generate_delivery[kt_schwyz-set_application_sz-ech_instance_sz]
  '''
  <?xml version="1.0" ?>
  <ns1:delivery xmlns:ns1="http://www.ech.ch/xmlns/eCH-0211/2" xmlns:ns2="http://www.ech.ch/xmlns/eCH-0058/5" xmlns:ns3="http://www.ech.ch/xmlns/eCH-0129/5" xmlns:ns4="http://www.ech.ch/xmlns/eCH-0010/6" xmlns:ns5="http://www.ech.ch/xmlns/eCH-0007/6" xmlns:ns6="http://www.ech.ch/xmlns/eCH-0147/T0/1" xmlns:ns7="http://www.ech.ch/xmlns/eCH-0039/2" xmlns:ns8="http://www.ech.ch/xmlns/eCH-0097/2" xmlns:ns9="http://www.ech.ch/xmlns/eCH-0044/4">
  	<ns1:deliveryHeader>
  		<ns2:senderId>https://behoerden.ebau-sz.ch/</ns2:senderId>
  		<ns2:messageId><!-- MESSAGE_ID --></ns2:messageId>
  		<ns2:messageType>5200000</ns2:messageType>
  		<ns2:sendingApplication>
  			<ns2:manufacturer>Adfinis AG</ns2:manufacturer>
  			<ns2:product>camac</ns2:product>
  			<ns2:productVersion><!-- VERSION --></ns2:productVersion>
  		</ns2:sendingApplication>
  		<ns2:subject>Einfache Vorabklärung</ns2:subject>
  		<ns2:messageDate>2022-06-03T00:00:00Z</ns2:messageDate>
  		<ns2:action>1</ns2:action>
  		<ns2:testDeliveryFlag>true</ns2:testDeliveryFlag>
  	</ns1:deliveryHeader>
  	<ns1:eventBaseDelivery>
  		<ns1:planningPermissionApplicationInformation>
  			<ns1:planningPermissionApplication>
  				<ns1:planningPermissionApplicationIdentification>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-8403-22-001</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-8403-22-001</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:planningPermissionApplicationIdentification>
  				<ns1:description>None</ns1:description>
  				<ns1:applicationType>Christopher Foster</ns1:applicationType>
  				<ns1:proceedingType>baubewilligung</ns1:proceedingType>
  				<ns1:profilingYesNo>false</ns1:profilingYesNo>
  				<ns1:intendedPurpose>.</ns1:intendedPurpose>
  				<ns1:parkingLotsYesNo>false</ns1:parkingLotsYesNo>
  				<ns1:namedMetaData>
  					<ns3:metaDataName>status</ns3:metaDataName>
  					<ns3:metaDataValue>David Rangel</ns3:metaDataValue>
  				</ns1:namedMetaData>
  				<ns1:locationAddress>
  					<ns4:street>unknown</ns4:street>
  					<ns4:houseNumber>0</ns4:houseNumber>
  					<ns4:town>unknown</ns4:town>
  					<ns4:swissZipCode>9999</ns4:swissZipCode>
  					<ns4:country>
  						<ns4:countryNameShort>CH</ns4:countryNameShort>
  					</ns4:country>
  				</ns1:locationAddress>
  				<ns1:realestateInformation>
  					<ns1:realestate>
  						<ns3:realestateIdentification>
  							<ns3:number>0</ns3:number>
  						</ns3:realestateIdentification>
  						<ns3:realestateType>8</ns3:realestateType>
  					</ns1:realestate>
  					<ns1:municipality>
  						<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  					</ns1:municipality>
  					<ns1:owner>
  						<ns1:ownerAdress>
  							<ns4:person>
  								<ns4:firstName>unknown</ns4:firstName>
  								<ns4:lastName>unknown</ns4:lastName>
  							</ns4:person>
  							<ns4:addressInformation>
  								<ns4:street>unknown</ns4:street>
  								<ns4:houseNumber>0</ns4:houseNumber>
  								<ns4:town>unknown</ns4:town>
  								<ns4:swissZipCode>9999</ns4:swissZipCode>
  								<ns4:country>
  									<ns4:countryNameShort>CH</ns4:countryNameShort>
  								</ns4:country>
  							</ns4:addressInformation>
  						</ns1:ownerAdress>
  					</ns1:owner>
  				</ns1:realestateInformation>
  				<ns1:constructionProjectInformation>
  					<ns1:constructionProject>
  						<ns3:projectStartDate>2022-06-03</ns3:projectStartDate>
  						<ns3:status>6701</ns3:status>
  						<ns3:description>unknown</ns3:description>
  						<ns3:durationOfConstructionPhase>999</ns3:durationOfConstructionPhase>
  					</ns1:constructionProject>
  					<ns1:municipality>
  						<ns5:municipalityName>Elizabethburgh</ns5:municipalityName>
  						<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  					</ns1:municipality>
  				</ns1:constructionProjectInformation>
  				<ns1:document>
  					<ns6:uuid>42b55f5f-3d79-4f29-af7b-a2377283a139</ns6:uuid>
  					<ns6:titles>
  						<ns7:title>able</ns7:title>
  					</ns6:titles>
  					<ns6:status>signed</ns6:status>
  					<ns6:files>
  						<ns6:file>
  							<ns6:pathFileName>http://ebau.local/api/v1/attachments/files/?attachments=<!-- ATTACHMENT_ID --></ns6:pathFileName>
  							<ns6:mimeType>multipart/form-data</ns6:mimeType>
  						</ns6:file>
  					</ns6:files>
  					<ns6:documentKind/>
  				</ns1:document>
  				<ns1:referencedPlanningPermissionApplication>
  					<ns1:localID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-8403-22-001</ns3:Id>
  					</ns1:localID>
  					<ns1:otherID>
  						<ns3:IdCategory>eBauNr</ns3:IdCategory>
  						<ns3:Id>TEST-8403-22-001</ns3:Id>
  					</ns1:otherID>
  					<ns1:dossierIdentification><!-- INSTANCE_ID --></ns1:dossierIdentification>
  				</ns1:referencedPlanningPermissionApplication>
  			</ns1:planningPermissionApplication>
  			<ns1:relationshipToPerson>
  				<ns1:role>applicant</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:organisationIdentification>
  							<ns8:uid>
  								<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  								<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  							</ns8:uid>
  							<ns8:localOrganisationId>
  								<ns8:organisationIdCategory>unknown</ns8:organisationIdCategory>
  								<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  							</ns8:localOrganisationId>
  							<ns8:organisationName>White Group</ns8:organisationName>
  							<ns8:organisationAdditionalName>Heather Marsh</ns8:organisationAdditionalName>
  							<ns8:legalForm>0223</ns8:legalForm>
  						</ns3:organisationIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Miller Centers</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Thomasville</ns4:town>
  						<ns4:swissZipCode>1816</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>contact</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Liu</ns9:officialName>
  							<ns9:firstName>Jessica</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Scott Ridge</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Lake Williamchester</ns4:town>
  						<ns4:swissZipCode>5731</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>project author</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Gilbert</ns9:officialName>
  							<ns9:firstName>Crystal</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Carl Port</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>Brownstad</ns4:town>
  						<ns4:swissZipCode>9394</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:relationshipToPerson>
  				<ns1:role>landowner</ns1:role>
  				<ns1:person>
  					<ns3:identification>
  						<ns3:personIdentification>
  							<ns9:officialName>Lloyd</ns9:officialName>
  							<ns9:firstName>Ian</ns9:firstName>
  						</ns3:personIdentification>
  					</ns3:identification>
  					<ns3:address>
  						<ns4:street>Ryan Burgs</ns4:street>
  						<ns4:houseNumber>0</ns4:houseNumber>
  						<ns4:town>East Charlesburgh</ns4:town>
  						<ns4:swissZipCode>5416</ns4:swissZipCode>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:person>
  			</ns1:relationshipToPerson>
  			<ns1:decisionAuthority>
  				<ns1:decisionAuthority>
  					<ns3:buildingAuthorityIdentificationType>
  						<ns8:uid>
  							<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  							<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  						</ns8:uid>
  						<ns8:localOrganisationId>
  							<ns8:organisationIdCategory>ebausz</ns8:organisationIdCategory>
  							<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  						</ns8:localOrganisationId>
  						<ns8:organisationName>Christine Powers</ns8:organisationName>
  						<ns8:legalForm>0223</ns8:legalForm>
  					</ns3:buildingAuthorityIdentificationType>
  					<ns3:address>
  						<ns4:street>None</ns4:street>
  						<ns4:town>unknown</ns4:town>
  						<ns4:country>
  							<ns4:countryNameShort>CH</ns4:countryNameShort>
  						</ns4:country>
  					</ns3:address>
  				</ns1:decisionAuthority>
  			</ns1:decisionAuthority>
  			<ns1:entryOffice>
  				<ns1:entryOfficeIdentification>
  					<ns8:uid>
  						<ns8:uidOrganisationIdCategorie>CHE</ns8:uidOrganisationIdCategorie>
  						<ns8:uidOrganisationId>123123123</ns8:uidOrganisationId>
  					</ns8:uid>
  					<ns8:localOrganisationId>
  						<ns8:organisationIdCategory>ebausz</ns8:organisationIdCategory>
  						<ns8:organisationId><!-- ORGANISATION_ID --></ns8:organisationId>
  					</ns8:localOrganisationId>
  					<ns8:organisationName>Christine Powers</ns8:organisationName>
  					<ns8:legalForm>0223</ns8:legalForm>
  				</ns1:entryOfficeIdentification>
  				<ns1:municipality>
  					<ns5:municipalityName>unknown</ns5:municipalityName>
  					<ns5:cantonAbbreviation>SZ</ns5:cantonAbbreviation>
  				</ns1:municipality>
  			</ns1:entryOffice>
  		</ns1:planningPermissionApplicationInformation>
  	</ns1:eventBaseDelivery>
  </ns1:delivery>
  
  '''
# ---
